[WIP] Configure dagger

--- a/app/src/main/res/layout/fragment_siginin.xml
+++ b/app/src/main/res/layout/fragment_siginin.xml
@@ -18,6 +18,7 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -39,6 +40,20 @@
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.6"
+      />
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="0dp"
+      android:layout_marginEnd="0dp"
+      android:layout_marginStart="0dp"
+      android:layout_marginTop="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      style="?android:attr/progressBarStyle"
       />
 
 </android.support.constraint.ConstraintLayout>
