--- a/app/src/main/res/layout/container_activity.xml
+++ b/app/src/main/res/layout/container_activity.xml
@@ -22,18 +22,8 @@
     android:orientation="vertical"
     >
 
-  <android.support.design.widget.CoordinatorLayout
-      android:id="@+id/coordinatorLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      >
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
-
-  </android.support.design.widget.CoordinatorLayout>
+  <include
+      layout="@layout/container"
+      />
 
 </LinearLayout>
