[WIP] Add profile components and refactor project structure

--- a/app/src/main/res/user/layout/fragment_profile.xml
+++ b/app/src/main/res/user/layout/fragment_profile.xml
@@ -16,8 +16,14 @@
   ~
   -->
 
-<resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
-</resources>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+  <include
+      layout="@layout/content_profile"
+      />
+
+</LinearLayout>
