--- a/app/src/main/res/main/layout/fragment_main.xml
+++ b/app/src/main/res/main/layout/fragment_main.xml
@@ -17,9 +17,13 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+  <include
+      layout="@layout/main_content"
+      />
 
 </LinearLayout>
