--- a/app/src/main/res/main/layout/main_content.xml
+++ b/app/src/main/res/main/layout/main_content.xml
@@ -22,11 +22,12 @@
     android:orientation="vertical"
     >
 
-  <android.support.v7.app.AlertController.RecycleListView
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/albums_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
 
-  </android.support.v7.app.AlertController.RecycleListView>
+  </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
