--- a/app/src/main/res/main/layout/main_content.xml
+++ b/app/src/main/res/main/layout/main_content.xml
@@ -16,18 +16,39 @@
   ~
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
 
   <android.support.v7.widget.RecyclerView
       android:id="@+id/albums_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      tools:layout_editor_absoluteY="63dp"
+      tools:layout_editor_absoluteX="16dp"
       >
-
   </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+  <ProgressBar
+      android:id="@android:id/empty"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:indeterminate="true"
+      android:indeterminateTint="?android:colorAccent"
+      android:indeterminateTintMode="src_in"
+      app:layout_constraintStart_toStartOf="@+id/albums_recycler_view"
+      android:layout_marginStart="8dp"
+      app:layout_constraintEnd_toEndOf="@+id/albums_recycler_view"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintBottom_toBottomOf="@+id/albums_recycler_view"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintTop_toTopOf="@+id/albums_recycler_view"
+      android:layout_marginTop="8dp"
+      />
+
+
+</android.support.constraint.ConstraintLayout>
