--- a/app/src/main/res/auth/layout/sign_in_content.xml
+++ b/app/src/main/res/auth/layout/sign_in_content.xml
@@ -22,12 +22,34 @@
     android:layout_height="match_parent"
     >
 
-  <include
-      layout="@layout/sign_in_content"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+  <com.google.android.gms.common.SignInButton
+      android:id="@+id/sign_in_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="0dp"
+      android:layout_marginStart="0dp"
+      android:layout_marginTop="0dp"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/guideline2"
+      />
+
+  <android.support.constraint.Guideline
+      android:id="@+id/guideline2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.6"
+      />
+  <Button
+      android:id="@+id/sign_in_button2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="0dp"
+      android:layout_marginRight="0dp"
+      android:layout_marginTop="0dp"
+      android:text="@string/sign_in_tile"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/guideline2"
       />
 
 </android.support.constraint.ConstraintLayout>
