--- a/app/src/main/res/album/layout/album_item.xml
+++ b/app/src/main/res/album/layout/album_item.xml
@@ -17,8 +17,11 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="10dp"
+    android:layout_height="10dp"
+    android:layout_margin="15dp"
+    android:background="@color/colorAccent"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
 
 </LinearLayout>
