--- a/app/src/main/res/main/layout/main_content.xml
+++ b/app/src/main/res/main/layout/main_content.xml
@@ -24,7 +24,7 @@
     >
 
   <android.support.v7.widget.RecyclerView
-      android:id="@+id/albums_recycler_view"
+      android:id="@+id/grid"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:layout_editor_absoluteY="63dp"
