--- a/app/src/main/res/auth/layout/sign_in_content.xml
+++ b/app/src/main/res/auth/layout/sign_in_content.xml
@@ -51,5 +51,16 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/guideline2"
       />
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:visibility="gone"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      style="?android:attr/progressBarStyle"
+      />
 
 </android.support.constraint.ConstraintLayout>
