--- a/app/src/main/res/album/layout/album_item.xml
+++ b/app/src/main/res/album/layout/album_item.xml
@@ -18,9 +18,8 @@
 
 <io.shtanko.picasagallery.view.widget.FourThreeImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-
-    android:background="@color/colorAccent"
+    android:layout_margin="10dp"
+    android:background="@color/green"
     />
