--- a/app/src/main/res/album/layout/album_item.xml
+++ b/app/src/main/res/album/layout/album_item.xml
@@ -21,4 +21,5 @@
     android:id="@+id/album"
     android:layout_width="match_parent"
     android:layout_height="0dp"
+    style="@style/PicasaImageView"
     />
