--- a/app/src/main/res/main/layout/container_list_test_fragment.xml
+++ b/app/src/main/res/main/layout/container_list_test_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright 2017 Alexey Shtanko
+  ~ Copyright 2018 Alexey Shtanko
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,26 +16,14 @@
   ~
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 
-  <ProgressBar
-      android:id="@+id/progress_bar"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerInParent="true"
-      android:visibility="gone"
-      style="?android:attr/progressBarStyle"
+  <include
+      layout="@layout/main_test_content"
       />
 
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/grid"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      >
-  </android.support.v7.widget.RecyclerView>
-
-
-</RelativeLayout>
+</LinearLayout>
