--- a/app/src/main/res/main/layout/main_test_content.xml
+++ b/app/src/main/res/main/layout/main_test_content.xml
@@ -31,7 +31,7 @@
       />
 
   <android.support.v7.widget.RecyclerView
-      android:id="@+id/grid"
+      android:id="@+id/main_content_grid"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
