--- a/app/src/main/res/main/layout/main_content.xml
+++ b/app/src/main/res/main/layout/main_content.xml
@@ -17,6 +17,7 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -34,6 +35,7 @@
       android:id="@+id/grid"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      tools:listitem="@layout/album_item"
       >
   </android.support.v7.widget.RecyclerView>
 
