--- a/app/src/main/res/xml/glide_disk_cache_path.xml
+++ b/app/src/main/res/xml/glide_disk_cache_path.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
-  ~ Copyright 2017 Alexey Shtanko
+  ~ Copyright 2018 Alexey Shtanko
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,12 +17,12 @@
   ~
   -->
 
-<io.shtanko.picasagallery.view.widget.FourThreeImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/album"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    tools:background="@color/colorAccent"
-    style="@style/PicasaImageView"
-    />
+<paths
+    xmlns:tools="http://schemas.android.com/tools">
+  <!-- Based on default Glide operation, see InternalCacheDiskCacheFactory instantiated
+                   from GlideBuilder.createGlide() -->
+  <cache-path
+      name="share"
+      path="image_manager_disk_cache"
+      tools:path="DiskCache.Factory.DEFAULT_DISK_CACHE_DIR"/>
+</paths>
